Refactor mouse scroll handling for module scaling and background opacity in HUD editor